[tool.poetry]
name = "qlibraw"
version = "0.1.0"  # This will be dynamically updated based on qlib/__init__.py
description = "A Quantitative-research Platform"
authors = ["Microsoft Corporation <your-email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "qlib" }
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
numpy = ">=1.23.3, <2.0.0"
pandas = ">=1.5.0"
scipy = ">=1.7.3"
requests = ">=2.18.0"
sacred = ">=0.7.4"
python-socketio = "*"
redis = ">=3.0.1"
python-redis-lock = ">=3.3.1"
schedule = ">=0.6.0"
cvxpy = ">=1.0.21"
hyperopt = "0.1.2"
fire = "0.5.0"
statsmodels = "*"
xlrd = ">=1.0.0"
plotly = ">=4.12.0"
matplotlib = ">=3.3"
tables = ">=3.8.0"
pyyaml = ">=5.3.1"
tqdm = "*"
loguru = "*"
lightgbm = ">=3.3.0"
tornado = "*"
joblib = ">=0.17.0"
ruamel-yaml = "<=0.17.36"
pymongo = ">=4.0.0"
scikit-learn = ">=0.22"
dill = "*"
filelock = "*"
jinja2 = "*"
gym = ">=0.26.0"
cryptography = "*"
xgboost = "^2.1.2"
catboost = "^1.2.7"
fastapi = "^0.115.4"
loky = "^3.4.1"
torch = "^2.5.1"
Cython = ">=0.29.0"
setuptools = "^75.3.0"
optuna = "^4.0.0"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
pandas-market-calendars = "^4.4.2"
aiohttp = ">=3.9.5,<3.10" # cahnged from ^3.11.10, to comply with the latest version of langflow
cachetools = "^5.5.0"
protobuf = ">=5.29.1"
rpds-py = ">=0.22.2"
mlflow = ">=2.18.0" # WE removed packaging as its not used.

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = ">=3"
sphinx = "*"
sphinx_rtd_theme = "*"
pre-commit = "*"
wheel = "*"
setuptools = "*"
black = "*"
pylint = ">=2.17.0"
mypy = ">=1.0.0"
flake8 = "*"
nbqa = "*"
jupyter = "*"
nbconvert = "*"
importlib-metadata = ">=5.0.0"
readthedocs_sphinx_ext = "*"
cmake = "*"
lxml = "*"
baostock = "*"
yahooquery = "*"
scs = ">=3.2.4"
beautifulsoup4 = "*"
tianshou = ">=0.5.0"
gym = ">=0.26.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.rl.dependencies]
tianshou = ">=0.5.0"
torch = ">=2.1.0, <3.0.0"
torchvision = ">=0.16.0, <0.21.0"
torchaudio = ">=2.1.0, <3.0.0"

[tool.poetry.scripts]
qrun = "qlib.workflow.cli:run"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "Cython>=0.29.0",
    "setuptools>=75.3.0",
    "wheel>=0.40.0",
    "numpy>=1.23.3"
]
build-backend = "poetry.core.masonry.api"

[tool.cython-build-options]
language_level = "3"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"
